; ModuleID = '/home/carl/AnghaBench/RetroArch/griffin/extr_..libretro-commonlistsfile_list.c_file_list_reserve.c'
source_filename = "/home/carl/AnghaBench/RetroArch/griffin/extr_..libretro-commonlistsfile_list.c_file_list_reserve.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i64, %struct.item_file* }
%struct.item_file = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @file_list_reserve(%struct.TYPE_3__* %0, i64 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.TYPE_3__*, align 8
  %5 = alloca i64, align 8
  %6 = alloca i64, align 8
  %7 = alloca %struct.item_file*, align 8
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %4, align 8
  store i64 %1, i64* %5, align 8
  store i64 4, i64* %6, align 8
  %8 = load i64, i64* %5, align 8
  %9 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %10 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %9, i32 0, i32 0
  %11 = load i64, i64* %10, align 8
  %12 = icmp ult i64 %8, %11
  br i1 %12, label %16, label %13

13:                                               ; preds = %2
  %14 = load i64, i64* %5, align 8
  %15 = icmp ugt i64 %14, 4611686018427387903
  br i1 %15, label %16, label %17

16:                                               ; preds = %13, %2
  store i32 0, i32* %3, align 4
  br label %47

17:                                               ; preds = %13
  %18 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %19 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %18, i32 0, i32 1
  %20 = load %struct.item_file*, %struct.item_file** %19, align 8
  %21 = load i64, i64* %5, align 8
  %22 = mul i64 %21, 4
  %23 = call i64 @realloc(%struct.item_file* %20, i64 %22)
  %24 = inttoptr i64 %23 to %struct.item_file*
  store %struct.item_file* %24, %struct.item_file** %7, align 8
  %25 = load %struct.item_file*, %struct.item_file** %7, align 8
  %26 = icmp ne %struct.item_file* %25, null
  br i1 %26, label %28, label %27

27:                                               ; preds = %17
  store i32 0, i32* %3, align 4
  br label %47

28:                                               ; preds = %17
  %29 = load %struct.item_file*, %struct.item_file** %7, align 8
  %30 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %31 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %30, i32 0, i32 0
  %32 = load i64, i64* %31, align 8
  %33 = getelementptr inbounds %struct.item_file, %struct.item_file* %29, i64 %32
  %34 = load i64, i64* %5, align 8
  %35 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %36 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %35, i32 0, i32 0
  %37 = load i64, i64* %36, align 8
  %38 = sub i64 %34, %37
  %39 = mul i64 4, %38
  %40 = call i32 @memset(%struct.item_file* %33, i32 0, i64 %39)
  %41 = load %struct.item_file*, %struct.item_file** %7, align 8
  %42 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %43 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %42, i32 0, i32 1
  store %struct.item_file* %41, %struct.item_file** %43, align 8
  %44 = load i64, i64* %5, align 8
  %45 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %46 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %45, i32 0, i32 0
  store i64 %44, i64* %46, align 8
  store i32 1, i32* %3, align 4
  br label %47

47:                                               ; preds = %28, %27, %16
  %48 = load i32, i32* %3, align 4
  ret i32 %48
}

declare dso_local i64 @realloc(%struct.item_file*, i64) #1

declare dso_local i32 @memset(%struct.item_file*, i32, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
